# skill_acquisition

./: CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  package.xml
scripts/: build_package_catalog.py  package_catalog.py  select_ros_target.py
skill_acq/: package.xml
skill_acq/scripts/: package_catalog.py  run_ros_target.py  skill_acq.py
