<?xml version="1.0"?>
<package format="3">
  <name>skill_acq</name>
  <version>0.1.0</version>
  <description>Platform-aware Runtime Skill Acquisition in ROS 2.</description>
  <maintainer email="10.anjalirao@gmail.com">Anjali Rao</maintainer>
  <maintainer email="nik.advani16@gmail.com">Nikhil Advani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-rosdep</exec_depend>
  <exec_depend>git</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
